Fix server shutdown and rename logs